# coco-healthcare-intelligence

./: Dockerfile  EVALUATION_FRAMEWORK.md  README.md  RUNBOOK.md  SECURITY.md  THREAT_MODEL.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
coco/: __init__.py
coco/api/: main.py
coco/api/routers/: care_gaps.py  readmission.py  summarization.py
coco/governance/: audit_logger.py  cost_telemetry.py  phase_gates.py
coco/workflows/: care_gap_workflow.py  readmission_workflow.py  summarization_workflow.py
config/: prometheus.yml
docs/: ARCHITECTURE.md  DEMO_WALKTHROUGH.md  DEPLOYMENT_AZURE.md  EVALUATION.md  PLAYBOOK_MAPPING.md  WHY_THIS_EXISTS.md
eval/: LLM_EVAL_PROMPT.md  eval_schema.json  run_eval.py
postmortems/: 2024-llm-hallucination-event.md
regulatory/: audit-evidence-index.md  fda-ml-change-control.md  hipaa-mapping.md
scripts/: demo.sh  generate_evidence_pack.sh  generate_synthetic_data.py  init-db.sql  run_demo.py
tests/: test_care_gaps.py
tests/governance/: test_governance.py
tests/integration/: test_api.py
