[project]
name = "coco-healthcare-intelligence"
version = "1.0.0"
description = "End-to-end healthcare AI platform demonstrating the 12-phase FDE production playbook"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Christopher Mangun", email = "cmangun@gmail.com" }
]
keywords = [
    "healthcare",
    "ai",
    "ml",
    "hipaa",
    "rag",
    "llm",
    "mlops",
    "fhir",
    "clinical-nlp",
    "compliance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "openai>=1.10.0",
    "tiktoken>=0.5.2",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "bandit>=1.7.7",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
]

ml = [
    "torch>=2.1.0",
    "transformers>=4.37.0",
    "sentence-transformers>=2.3.0",
    "spacy>=3.7.0",
    "medspacy>=1.0.0",
]

azure = [
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",
    "azure-ai-ml>=1.12.0",
    "azure-search-documents>=11.4.0",
]

aws = [
    "boto3>=1.34.0",
    "sagemaker>=2.200.0",
]

[project.urls]
Homepage = "https://github.com/cmangun/coco-healthcare-intelligence"
Documentation = "https://github.com/cmangun/coco-healthcare-intelligence/docs"
Repository = "https://github.com/cmangun/coco-healthcare-intelligence"
Portfolio = "https://healthcare-ai-consultant.com"

[project.scripts]
coco = "coco.cli:main"
coco-demo = "scripts.run_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coco"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=coco --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
